--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,10 @@
     "@types/jsonwebtoken": "9.0.6",
     "axios": "1.6.8",
     "cookie": "0.6.0",
+    "cookie-parser": "1.4.6",
     "cookies": "0.9.1",
     "jsonwebtoken": "9.0.2",
     "next": "14.2.3",
-    "next-auth": "4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "6.23.0",
