--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "5.15.15",
     "@mui/material": "5.15.15",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
+    "@mui/styles": "5.15.18",
     "@types/cookie": "0.6.0",
     "@types/cookies": "0.9.0",
     "@types/jsonwebtoken": "9.0.6",
