--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "cookie": "0.6.0",
     "cookie-parser": "1.4.6",
     "cookies": "0.9.1",
+    "firebase": "10.12.0",
     "jsonwebtoken": "9.0.2",
     "next": "14.2.3",
     "react": "^18",
