--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,8 @@
     "bcrypt": "5.1.1",
     "class-validator": "0.14.1",
     "cookie-parser": "1.4.6",
+    "firebase-admin": "12.1.0",
+    "firebase-functions": "5.0.1",
     "mysql": "2.18.1",
     "passport-jwt": "4.0.1",
     "postgres": "3.4.4",
