--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -17,8 +18,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "20"
+  },
+  "main": "dist/index.js",
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "3.2.2",
@@ -31,8 +40,6 @@
     "bcrypt": "5.1.1",
     "class-validator": "0.14.1",
     "cookie-parser": "1.4.6",
-    "firebase-admin": "12.1.0",
-    "firebase-functions": "5.0.1",
     "mysql": "2.18.1",
     "passport-jwt": "4.0.1",
     "postgres": "3.4.4",
