--- a/server/package.json
+++ b/server/package.json
@@ -70,7 +70,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "rimraf": "^3.0.2"
   },
   "jest": {
     "moduleFileExtensions": [
