--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "npm run typeorm -- migration:generate -d src/data-source.ts -p src/migrations -n",
+    "migration:run": "npm run typeorm -- migration:run -d src/data-source.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/data-source.ts",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -22,7 +26,10 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config -n src/data-source.ts",
+    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
   "main": "dist/index.js",
   "dependencies": {
@@ -33,6 +40,7 @@
     "@nestjs/mapped-types": "2.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "10.0.2",
+    "@ngneat/falso": "7.2.0",
     "@prisma/client": "5.13.0",
     "bcrypt": "5.1.1",
     "class-validator": "0.14.1",
@@ -43,7 +51,8 @@
     "react-router-dom": "6.23.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "0.3.20"
+    "typeorm": "0.3.20",
+    "typeorm-seeding": "1.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -52,6 +61,7 @@
     "@types/bcrypt": "5.0.2",
     "@types/cookie-parser": "1.4.7",
     "@types/express": "4.17.21",
+    "@types/faker": "6.6.9",
     "@types/jest": "^29.5.2",
     "@types/node": "20.12.8",
     "@types/passport-jwt": "4.0.1",
@@ -64,14 +74,14 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "5.13.0",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "5.4.5",
-    "rimraf": "^3.0.2"
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.4.5"
   },
   "jest": {
     "moduleFileExtensions": [
