--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "typeorm-seeding": "1.6.1"
   },
   "devDependencies": {
+    "@eslint/js": "9.3.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -63,9 +64,10 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
+    "eslint": "9.3.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "globals": "15.3.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "5.13.0",
@@ -76,7 +78,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "typescript-eslint": "7.11.0"
   },
   "jest": {
     "moduleFileExtensions": [
